@@ -4,7 +4,7 @@
 \title{News for \R Package \pkg{copula}}% MM: look into ../svn-log-from.all
 \newcommand{\CRANpkg}{\href{https://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 
-\section{Changes in version 0.999-16 (2016-09-.., svn r14..)}{
+\section{Changes in version 0.999-16 (2016-11-.., svn r14..)}{
   \subsection{Bug Fixes}{
     \itemize{
       \item \code{pK(u, log.p=TRUE)} now correctly checks \code{u}.
@@ -21,6 +21,9 @@
 
       \item \code{"mvdc"} methods for \code{contour()}, \code{persp()}
       and \code{wireframe2()} now use \code{ylim} correctly.
+
+      \item \code{cCopula(<archmCopula>)} failed for 2-dimensional AMH,
+      Clayton, and Frank in the \emph{negative}-\eqn{\tau} case.
     }
   }
   \subsection{New Features}{
